--- a/views/partials/_menu.ejs
+++ b/views/partials/_menu.ejs
@@ -12,7 +12,7 @@
                 <nav class="site-navbar">
                    <ul>
                       <li><a class="active" href="index.html">Home</a></li>
-                      <li><a href="about.html">About</a></li>
+                      <li><a href="about.ejs">About</a></li>
                       <li><a href="services.html">Services</a></li>
                       <li><a href="gallery.html">Gallery</a></li>
                       <li><a href="projects.html">Projects</a></li>
