--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,25 +17,23 @@
               <div class="col-md-12 ">
                 <div class="titlepage text_align_center">
                   
-                  <h2>Register</h2>
+                  <h2>Login</h2>
                 </div>
               </div>
               <div class="col-md-8 offset-md-2">
-                <form id="request" class="main_form"  action="users/register" method="POST">
+                <form id="request" class="main_form"  action="users/login" method="POST">
                   <div class="row">
                     <div class="col-md-12">
                       <input class="form_control" placeholder="username" type="text" name="username"> 
                     </div>
-                    <div class="col-md-12">
-                      <input class="form_control" placeholder="email" type="email" name="email">                          
-                    </div>
+                
                     <div class="col-md-12">
                         <input class="form_control" placeholder="password" type="password" name="password">                          
                       </div>
                   
                     <div class="col-md-12">
                       <div class="group_form">
-                        <button class="send_btn">Register</button>
+                        <button class="send_btn">Login</button>
                        
                       </div>
                     </div>
