--- a/views/partials/_menu.ejs
+++ b/views/partials/_menu.ejs
@@ -15,6 +15,7 @@
                      <li><a href="/about">About</a></li>
                      <li><a href="/photos">Photos</a></li>
                      <li><a href="/register">Register</a></li>
+                     <li><a href="/login">Login</a></li>
 
                     
                    </ul>
